# template-mark03-bbi

./: pyproject.toml
src/: run.py
src/app/: config.py  loggingconfig.py  main.py  utils.py
src/app/forms/: constants.py  schedule.py
src/app/middlewares/: security.py
src/app/routes/: __init__.py  home.py  pages.py  static.py
src/app/views/: home.py  pages.py  schedule.py
src/static/css/: input.css  package-lock.json  package.json  styles.css  tailwind.config.js
src/static/js/: home.js  institutional.js
src/static/js/modules/: svg.js  utils.js
src/static/js/modules/apps/: benefits.js  benefitsData.js  coaches.js  diferentials.js  differentials.js  footer.js  gallery.js  hero.js  how.js  howData.js  locationContact.js  nav.js  scheduleTrial.js  testimony.js
src/static/js/modules/apps/data/: benefitsData.js  coachesData.js  howData.js  locationcontactData.js  scheduleData.js  testimonyData.js
src/static/js/modules/components/: actions.js  bullets.js  constants.js  display.js  fields.js  forms.js  lists.js  utils.js
src/static/js/modules/engine/: DOM.js  core.js  events.js  utils.js
src/static/js/modules/utils/: lazyMount.js
src/templates/: base.html  home.html
src/templates/emails/: schedule_confirmation.html  schedule_notify_admin.html
src/templates/includes/: footer.html  header.html
src/templates/pages/: colors.html  institutional.html
src/templates/sections/: benefits.html  coaches.html  contact.html  differentials.html  galery.html  hero.html  how.html  location_contact.html  testimonials.html
tests/forms/: test_schedule.py
